fixing the missing background image

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("/Refactor-project/assets/images/digital-marketing-meeting.jpg");
+    background-image: url("Refactor-project/assets/images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
